Update: 更新部屬 ps1

--- a/Directory.build.props
+++ b/Directory.build.props
@@ -5,6 +5,7 @@
     <Authors></Authors>
     <Company></Company>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+    <PathMap>$(MSBuildProjectDirectory)=./</PathMap>
   </PropertyGroup>
 
   <!-- Dynamically load props from files based on <SitecoreRoleType> set in project file -->
