--- a/src/Foundation/Wealth/platform/App_Config/Include/Foundation/Foundation.Wealth/Foundation.Wealth.config
+++ b/src/Foundation/Wealth/platform/App_Config/Include/Foundation/Foundation.Wealth/Foundation.Wealth.config
@@ -1,5 +1,9 @@
-<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/" xmlns:role="http://www.sitecore.net/xmlconfig/role/" xmlns:env="http://www.sitecore.net/xmlconfig/env">
+﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/" xmlns:role="http://www.sitecore.net/xmlconfig/role/" xmlns:env="http://www.sitecore.net/xmlconfig/env">
   <sitecore>
-
+    <pipelines>
+      <initialize>
+        <processor type="Foundation.Wealth.Pipelines.Initialize.ClientRoute, Foundation.Wealth" patch:after="processor[@type='Sitecore.Pipelines.Loader.EnsureAnonymousUsers, Sitecore.Kernel']" />
+      </initialize>
+    </pipelines>
   </sitecore>
 </configuration>
