Add: 基金通路報酬(FundReturn)

--- a/src/Feature/Component/platform/Feature.Wealth.Component.csproj
+++ b/src/Feature/Component/platform/Feature.Wealth.Component.csproj
@@ -6,6 +6,12 @@
     <SitecoreRoleType>platform</SitecoreRoleType>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Dapper" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectCapability Include="SupportsSystemWeb" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Foundation\Wealth\platform\Foundation.Wealth.csproj" />
   </ItemGroup>
 </Project>
