--- a/src/Feature/Component/platform/Feature.Wealth.Component.csproj
+++ b/src/Feature/Component/platform/Feature.Wealth.Component.csproj
@@ -6,6 +6,9 @@
     <SitecoreRoleType>platform</SitecoreRoleType>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Views\Feature\Wealth\Component\PopularityFund\PopularFundReturnView.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Dapper" />
   </ItemGroup>
   <ItemGroup>
