Update: 調整架構 - 修改 layout - 調整 sitecore.config - 更新 xcms.dll 套件
Add: 新增功能
-新增 預設值 xcms config
- 新增客製化 combine.js
- 新增元件麵包屑
- 新增元件選單

--- a/src/Feature/Component/platform/Feature.Wealth.Component.csproj
+++ b/src/Feature/Component/platform/Feature.Wealth.Component.csproj
@@ -13,5 +13,11 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Foundation\Wealth\platform\Foundation.Wealth.csproj" />
+    <Reference Include="Xcms.Sitecore.Foundation.Caching">
+      <HintPath>..\..\..\..\build\nugets\Xcms.Sitecore.Foundation.Caching.dll</HintPath>
+    </Reference>
+    <Reference Include="Xcms.Sitecore.Feature.Navigation">
+      <HintPath>..\..\..\..\build\nugets\Xcms.Sitecore.Feature.Navigation.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
