--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -1,5 +1,38 @@
-<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/" xmlns:role="http://www.sitecore.net/xmlconfig/role/" xmlns:env="http://www.sitecore.net/xmlconfig/env">
-  <sitecore>
-
+﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/" xmlns:role="http://www.sitecore.net/xmlconfig/role/" xmlns:search="http://www.sitecore.net/xmlconfig/search/" xmlns:environment="http://www.sitecore.net/xmlconfig/environment/">
+  <sitecore role:require="Standalone or ContentManagement or ContentDelivery">
+    <sc.variable name="demo.01" value="demo-zh-hant" patch:before="prototypes[1]" />
+    <sc.variable name="wealth.01" value="wealth-zh-hant" patch:before="prototypes[1]" />
+    <sites>
+      <site name="$(demo.01)" inherits="website" patch:before="site[@name='website']" environment:require="Development or Staging or Local">
+        <patch:attribute name="virtualFolder">/demo</patch:attribute>
+        <patch:attribute name="physicalFolder">/</patch:attribute>
+        <patch:attribute name="rootPath">/sitecore/content</patch:attribute>
+        <patch:attribute name="startItem">/demo</patch:attribute>
+        <patch:attribute name="language">zh-TW</patch:attribute>
+        <patch:attribute name="cacheHtml" role:require="ContentManagement">false</patch:attribute>
+        <patch:attribute name="disableBrowserCaching" role:require="ContentDelivery">false</patch:attribute>
+      </site>
+      <site name="$(wealth.01)" inherits="website" patch:before="site[@name='website']">
+        <patch:attribute name="virtualFolder">/</patch:attribute>
+        <patch:attribute name="physicalFolder">/</patch:attribute>
+        <patch:attribute name="rootPath">/sitecore/content/firstbank/zh-hant</patch:attribute>
+        <patch:attribute name="startItem">/home</patch:attribute>
+        <patch:attribute name="language">zh-TW</patch:attribute>
+        <patch:attribute name="hostName" environment:require="Local"></patch:attribute>
+        <patch:attribute name="hostName" role:require="ContentManagement" environment:require="Development">fcbdev-cm.esi-tech.net|vcb811.esi-tech.net</patch:attribute>
+        <patch:attribute name="hostName" role:require="ContentDelivery" environment:require="Development">fcb.cd|fcbdev.esi-tech.net</patch:attribute>
+        <patch:attribute name="hostName" role:require="ContentManagement" environment:require="Staging">weamg.firstbank-tt.com.tw</patch:attribute>
+        <patch:attribute name="hostName" role:require="ContentDelivery" environment:require="Staging">weaap.fcbsrv-tt.fcb.local|wealth.firstbank-tt.com.tw</patch:attribute>
+        <patch:attribute name="hostName" role:require="ContentManagement" environment:require="Production">weamg.firstbank.com.tw</patch:attribute>
+        <patch:attribute name="hostName" role:require="ContentDelivery" environment:require="Production">weaap.fcbsrv.fcb.local|wealth.firstbank.com.tw</patch:attribute>
+        <patch:attribute name="targetHostName" environment:require="Local"></patch:attribute>
+        <patch:attribute name="targetHostName" role:require="ContentManagement" environment:require="Development">fcbdev-cm.esi-tech.net</patch:attribute>
+        <patch:attribute name="targetHostName" role:require="ContentDelivery" environment:require="Development">fcbdev.esi-tech.net</patch:attribute>
+        <patch:attribute name="targetHostName" role:require="ContentManagement" environment:require="Staging">weamg.firstbank.com.tw</patch:attribute>
+        <patch:attribute name="targetHostName" role:require="ContentDelivery" environment:require="Staging">wealth.firstbank.com.tw</patch:attribute>
+        <patch:attribute name="targetHostName" role:require="ContentManagement" environment:require="Production">weamg.firstbank.com.tw</patch:attribute>
+        <patch:attribute name="targetHostName" role:require="ContentDelivery" environment:require="Production">weaap.fcbsrv.fcb.local|wealth.firstbank.com.tw</patch:attribute>
+      </site>
+    </sites>
   </sitecore>
 </configuration>
