--- a/src/Feature/Octon/platform/App_Config/Include/Feature/Feature.Wealth.Octon/Feature.Wealth.Octon.config
+++ b/src/Feature/Octon/platform/App_Config/Include/Feature/Feature.Wealth.Octon/Feature.Wealth.Octon.config
@@ -1,4 +1,4 @@
-<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/" xmlns:role="http://www.sitecore.net/xmlconfig/role/" xmlns:env="http://www.sitecore.net/xmlconfig/env">
+<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/" xmlns:role="http://www.sitecore.net/xmlconfig/role/" xmlns:environment="http://www.sitecore.net/xmlconfig/environment/">
   <sitecore>
 
   </sitecore>
