Update: 得獎基金 格式調整

--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -34,5 +34,9 @@
         <patch:attribute name="targetHostName" role:require="ContentDelivery" environment:require="Production">weaap.fcbsrv.fcb.local|wealth.firstbank.com.tw</patch:attribute>
       </site>
     </sites>
+    <settings>
+      <setting name="FirstbankApiRoute" value="https://wms.firstbank.com.tw/jsondata/"/>
+      <setting name="FirstbankApiUrl" value="fundjsondata.xdjjson"/>
+    </settings>
   </sitecore>
 </configuration>
