add: 國內基金詳細頁
fix: fix config remove useless

fix : fix conflict

update: 移除console

update: 調整cofig、更新切版檔案

fix : 公開說明書js調整

Update : 移除未使用到檔案

add : C02 基金詳細頁-境外

update: 移除console

update: 調整cofig、更新切版檔案

fix : 公開說明書js調整

Update : 移除未使用到檔案

fix: fix conflict

--- a/Packages.props
+++ b/Packages.props
@@ -21,6 +21,7 @@
     <!-- === misc === -->
     <PackageReference Update="ChoETL" Version="1.2.1.64" />
     <PackageReference Update="Dapper" Version="2.1.28" />
+    <PackageReference Update="Flurl" Version="4.0.0" />
     <PackageReference Update="Flurl.Http" Version="4.0.2" />
     <PackageReference Update="HtmlSanitizer" Version="8.0.811" />
     <PackageReference Update="Mapster" Version="7.3.0" />
