ETF 搜尋篩選項目

--- a/src/Feature/ScheduleAgent/platform/Feature.Wealth.ScheduleAgent.csproj
+++ b/src/Feature/ScheduleAgent/platform/Feature.Wealth.ScheduleAgent.csproj
@@ -6,6 +6,9 @@
     <SitecoreRoleType>platform</SitecoreRoleType>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="SiteCron" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectCapability Include="SupportsSystemWeb" />
   </ItemGroup>
   <ItemGroup>
