ETF 搜尋結果，查詢檢視表 parse JSON data

--- a/src/Feature/Component/platform/Feature.Wealth.Component.csproj
+++ b/src/Feature/Component/platform/Feature.Wealth.Component.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Dapper" />
     <PackageReference Include="Flurl" />
     <PackageReference Include="Flurl.Http" />
+    <PackageReference Include="Mapster" />
   </ItemGroup>
   <ItemGroup>
     <ProjectCapability Include="SupportsSystemWeb" />
