add: 共用幣別lightbox、申購 fix:基金詳細頁bugfix

--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -1,4 +1,21 @@
 ﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/" xmlns:role="http://www.sitecore.net/xmlconfig/role/" xmlns:environment="http://www.sitecore.net/xmlconfig/environment/">
   <sitecore>
+    <settings>
+    <setting name="Facebook.AppId" value="795305872480111"  environment:require="Local or Development"/>
+    <setting name="Facebook.AppSecret" value="9d1f95cf5d394d20bcfa2da2929da8ba"  environment:require="Local or Development"/>
+    <setting name="Facebook.AppId" value=""  environment:require="Staging or Production"/>
+    <setting name="Facebook.AppSecret" value=""  environment:require="Staging or Production"/>
+    <setting name="Facebook.AuthUrl" value="https://www.facebook.com/v19.0/dialog/oauth?client_id={AppId}&amp;redirect_uri={RedirectUrl}&amp;state={state}" />
+    <setting name="Facebook.TokenUrl" value="https://graph.facebook.com/v19.0/oauth/access_token?client_id={AppId}&amp;redirect_uri={RedirectUrl}&amp;client_secret={AppSecret}&amp;code={code}" />
+    <setting name="Facebook.ProfileUrl" value="https://graph.facebook.com/v19.0/me?fields=id,name,email" />
+    <setting name="Line.ClientId" value="2004541583" environment:require="Local or Development" />
+    <setting name="Line.ClientSecret" value="614ececff1b8984eef0cfdb784b6db75" environment:require="Local or Development" />
+    <setting name="Line.ClientId" value="" environment:require="Staging or Production" />
+    <setting name="Line.ClientSecret" value="" environment:require="Staging or Production" />
+    <setting name="Line.AuthUrl" value="https://access.line.me/oauth2/v2.1/authorize?scope={scope}&amp;response_type=code&amp;state={state}&amp;redirect_uri={RedirectUrl}&amp;client_id={clientid}"/>
+    <setting name="Line.TokenUrl" value="https://api.line.me/oauth2/v2.1/token"/>
+    <setting name="Line.ProfileUrl" value="https://api.line.me/v2/profile"/>
+    <setting name="Line.VerifyUrl" value="https://api.line.me/oauth2/v2.1/verify"/>
+    </settings>
   </sitecore>
 </configuration>
