--- a/src/Feature/Account/platform/Feature.Wealth.Account.csproj
+++ b/src/Feature/Account/platform/Feature.Wealth.Account.csproj
@@ -9,6 +9,10 @@
     <ProjectCapability Include="SupportsSystemWeb" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Component\platform\Feature.Wealth.Component.csproj" />
+    <PackageReference Include="Flurl" />
+    <PackageReference Include="Flurl.Http" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Foundation\Wealth\platform\Foundation.Wealth.csproj" />
   </ItemGroup>
 </Project>
