--- a/src/Project/Wealth/platform/App_Config/Modules/_Xcms.DefaultSettingOverrides/Change.Log4net.config
+++ b/src/Project/Wealth/platform/App_Config/Modules/_Xcms.DefaultSettingOverrides/Change.Log4net.config
@@ -2,57 +2,76 @@
   <sitecore role:require="Standalone or ContentManagement or ContentDelivery">
     <sc.variable name="log4netConversionPattern" value="%4t %d{ISO8601} %-5p %m%n" patch:before="prototypes[1]" />
     <log4net>
-      <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender, Sitecore.Logging">
-        <rollingStyle value="Composite" />
+      <root environment:require="Local or Development">
+        <appender-ref ref="IntegrationDebugAppender" />
+        <appender-ref ref="IntegrationLogConsoleAppender" />
+      </root>
+      <appender name="IntegrationDebugAppender" type="log4net.Appender.TraceAppender, Sitecore.Logging">
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="$(log4netConversionPattern)" />
+          <conversionPattern set:value="%d{ISO8601} [%-5p] [%4t] %m%n" />
+        </layout>
+      </appender>
+      <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender, Sitecore.Logging">
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern set:value="%d{ISO8601} [%-5p] [%4t] %m%n" />
+        </layout>
+      </appender>
+      <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender, Sitecore.Logging">
+        <rollingStyle set:value="Composite" />
+        <staticLogFileName set:value="false" />
+        <datePattern set:value=".yyyyMMdd'.txt'" />
+        <preserveLogFileNameExtension set:value="true" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern set:value="$(log4netConversionPattern)" />
         </layout>
       </appender>
       <appender name="PublishingLogFileAppender" type="log4net.Appender.SitecoreLogFileAppender, Sitecore.Logging">
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="$(log4netConversionPattern)" />
+          <conversionPattern set:value="$(log4netConversionPattern)" />
         </layout>
       </appender>
       <appender name="ClientLogAppender" type="log4net.Appender.SitecoreLogFileAppender, Sitecore.Logging">
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="$(log4netConversionPattern)" />
+          <conversionPattern set:value="$(log4netConversionPattern)" />
         </layout>
       </appender>
       <appender name="SearchLogFileAppender" type="log4net.Appender.SitecoreLogFileAppender, Sitecore.Logging">
-        <file value="/App_Data/logs/Search.log.{date}.{time}.txt" />
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="$(log4netConversionPattern)" />
+          <conversionPattern set:value="$(log4netConversionPattern)" />
         </layout>
       </appender>
       <appender name="CrawlingLogFileAppender" type="log4net.Appender.SitecoreLogFileAppender, Sitecore.Logging">
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="$(log4netConversionPattern)" />
+          <conversionPattern set:value="$(log4netConversionPattern)" />
         </layout>
       </appender>
       <appender name="OwinLogFileAppender" type="log4net.Appender.RollingFileAppender, Sitecore.Logging">
-        <rollingStyle value="Composite" />
+        <rollingStyle set:value="Composite" />
+        <staticLogFileName set:value="false" />
+        <datePattern set:value=".yyyyMMdd'.txt'" />
+        <preserveLogFileNameExtension set:value="true" />
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="$(log4netConversionPattern)" />
+          <conversionPattern set:value="$(log4netConversionPattern)" />
         </layout>
       </appender>
       <appender name="ContactMergeLogFileAppender" type="log4net.Appender.SitecoreLogFileAppender, Sitecore.Logging">
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="$(log4netConversionPattern)" />
+          <conversionPattern set:value="$(log4netConversionPattern)" />
         </layout>
       </appender>
       <appender name="AzureFallbackAppender" type="Sitecore.ExperienceContentManagement.Administration.Logging.AzureFallbackAppender, Sitecore.ExperienceContentManagement.Administration">
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="$(log4netConversionPattern)" />
+          <conversionPattern set:value="$(log4netConversionPattern)" />
         </layout>
       </appender>
       <appender name="FxmLogFileAppender" type="log4net.Appender.SitecoreLogFileAppender, Sitecore.Logging">
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="$(log4netConversionPattern)" />
+          <conversionPattern set:value="$(log4netConversionPattern)" />
         </layout>
       </appender>
       <appender name="ExmLogFileAppender" type="log4net.Appender.SitecoreLogFileAppender, Sitecore.Logging">
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="$(log4netConversionPattern)" />
+          <conversionPattern set:value="$(log4netConversionPattern)" />
         </layout>
       </appender>
     </log4net>
