--- a/Packages.props
+++ b/Packages.props
@@ -19,16 +19,17 @@
     <PackageReference Update="xunit" Version="2.6.5" />
 
     <!-- === misc === -->
-    <PackageReference Update="ChoETL" Version="1.2.1.64" />
-    <PackageReference Update="Dapper" Version="2.1.28" />
+    <PackageReference Update="Dapper" Version="2.1.35" />
     <PackageReference Update="Flurl" Version="4.0.0" />
     <PackageReference Update="Flurl.Http" Version="4.0.2" />
-    <PackageReference Update="HtmlSanitizer" Version="8.0.811" />
-    <PackageReference Update="Mapster" Version="7.3.0" />
-    <PackageReference Update="Quartz" Version="3.8.0" />
-    <PackageReference Update="Scriban" Version="5.9.1" />
+    <PackageReference Update="HtmlSanitizer" Version="8.0.865" />
+    <PackageReference Update="Quartz" Version="3.9.0" />
+    <PackageReference Update="Scriban" Version="5.10.0" />
     <PackageReference Update="SiteCron" Version="3.6.1" />
     <PackageReference Update="X.PagedList" Version="8.4.7" />
+
+    <!-- === pin misc === -->
+    <PackageReference Update="Mapster" Version="7.3.0" />
   </ItemGroup>
   <ItemGroup>
     <!-- === platform vulnerability version fix for === -->
@@ -46,9 +47,9 @@
   <ItemGroup>
     <!-- === shared === -->
     <PackageReference Update="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" Version="4.1.0" />
-    <PackageReference Update="Microsoft.Net.Compilers.ToolSet" Version="4.8.0" />
-    <PackageReference Update="Microsoft.CodeAnalysis.CSharp.CodeStyle" Version="4.8.0" />
-    <PackageReference Update="SonarAnalyzer.CSharp" Version="9.20.0.85982" />
+    <PackageReference Update="Microsoft.Net.Compilers.ToolSet" Version="4.9.2" />
+    <PackageReference Update="Microsoft.CodeAnalysis.CSharp.CodeStyle" Version="4.9.2" />
+    <PackageReference Update="SonarAnalyzer.CSharp" Version="9.25.0.90414" />
 
     <!-- === platform pin the specified version for sitecore 10.3.* === -->
     <PackageReference Update="Microsoft.AspNet.Mvc" Version="5.2.4" />
