--- a/src/Project/Wealth/platform/App_Config/Include/Foundation/Xcms/Xcms.Sitecore.Foundation.Basic.Log4net.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Foundation/Xcms/Xcms.Sitecore.Foundation.Basic.Log4net.config
@@ -1,19 +1,17 @@
 ﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/" xmlns:role="http://www.sitecore.net/xmlconfig/role/" xmlns:search="http://www.sitecore.net/xmlconfig/search/" xmlns:environment="http://www.sitecore.net/xmlconfig/environment/">
   <sitecore>
     <log4net>
-      <appender name="IntegrationDebugAppender" type="log4net.Appender.TraceAppender, Sitecore.Logging">
-        <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%d{ISO8601} [%-5p] [%4t] %m%n" />
-        </layout>
-      </appender>
       <appender name="IntegrationLogFileAppender" type="log4net.Appender.SitecoreLogFileAppender, Sitecore.Logging">
         <file value="$(dataFolder)/logs/Integration.General.log.{date}.{time}.txt" />
         <appendToFile value="true" />
         <rollingStyle value="Composite" />
+        <staticLogFileName value="false" />
+        <datePattern value=".yyyyMMdd'.txt'" />
+        <preserveLogFileNameExtension value="true" />
         <maxSizeRollBackups value="-1" />
         <maximumFileSize value="10MB" />
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%d{ISO8601} %-5p [%4t] %m%n" />
+          <conversionPattern set:value="%d{ISO8601} %-5p [%4t] %m%n" />
         </layout>
         <encoding value="utf-8" />
       </appender>
@@ -21,10 +19,13 @@
         <file value="$(dataFolder)/logs/Integration.Account.log.{date}.{time}.txt" />
         <appendToFile value="true" />
         <rollingStyle value="Composite" />
+        <staticLogFileName value="false" />
+        <datePattern value=".yyyyMMdd'.txt'" />
+        <preserveLogFileNameExtension value="true" />
         <maxSizeRollBackups value="-1" />
         <maximumFileSize value="10MB" />
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%d{ISO8601} %-5p [%4t] %m%n" />
+          <conversionPattern set:value="%d{ISO8601} %-5p [%4t] %m%n" />
         </layout>
         <encoding value="utf-8" />
       </appender>
@@ -32,10 +33,13 @@
         <file value="$(dataFolder)/logs/Integration.Database.log.{date}.{time}.txt" />
         <appendToFile value="true" />
         <rollingStyle value="Composite" />
+        <staticLogFileName value="false" />
+        <datePattern value=".yyyyMMdd'.txt'" />
+        <preserveLogFileNameExtension value="true" />
         <maxSizeRollBackups value="-1" />
         <maximumFileSize value="10MB" />
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%d{ISO8601} %-5p [%4t] %m%n" />
+          <conversionPattern set:value="%d{ISO8601} %-5p [%4t] %m%n" />
         </layout>
         <encoding value="utf-8" />
       </appender>
@@ -43,35 +47,34 @@
         <file value="$(dataFolder)/logs/Integration.Api.log.{date}.{time}.txt" />
         <appendToFile value="true" />
         <rollingStyle value="Composite" />
+        <staticLogFileName value="false" />
+        <datePattern value=".yyyyMMdd'.txt'" />
+        <preserveLogFileNameExtension value="true" />
         <maxSizeRollBackups value="-1" />
         <maximumFileSize value="10MB" />
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%d{ISO8601} %-5p [%4t] %m%n" />
+          <conversionPattern set:value="%d{ISO8601} %-5p [%4t] %m%n" />
         </layout>
         <encoding value="utf-8" />
       </appender>
       <logger name="Diagnostics.Integration.General" additivity="false">
         <level value="INFO" />
         <appender-ref ref="IntegrationLogFileAppender" />
-        <appender-ref ref="IntegrationDebugAppender" environment:require="Local or Development" />
         <appender-ref ref="AzureFallbackAppender" desc="AzureFallbackAppender" />
       </logger>
       <logger name="Diagnostics.Integration.Account" additivity="false">
         <level value="INFO" />
         <appender-ref ref="IntegrationAccountLogFileAppender" />
-        <appender-ref ref="IntegrationLogConsoleAppender" environment:require="Local or Development" />
         <appender-ref ref="AzureFallbackAppender" desc="AzureFallbackAppender" />
       </logger>
       <logger name="Diagnostics.Integration.Database" additivity="false">
         <level value="INFO" />
         <appender-ref ref="IntegrationDatabaseLogFileAppender" />
-        <appender-ref ref="IntegrationLogConsoleAppender" environment:require="Local or Develop" />
         <appender-ref ref="AzureFallbackAppender" desc="AzureFallbackAppender" />
       </logger>
       <logger name="Diagnostics.Integration.Api" additivity="false">
         <level value="INFO" />
         <appender-ref ref="IntegrationApiLogFileAppender" />
-        <appender-ref ref="IntegrationLogConsoleAppender" environment:require="Local or Development" />
         <appender-ref ref="AzureFallbackAppender" desc="AzureFallbackAppender" />
       </logger>
     </log4net>
