--- a/src/Foundation/Wealth/platform/Foundation.Wealth.csproj
+++ b/src/Foundation/Wealth/platform/Foundation.Wealth.csproj
@@ -8,4 +8,8 @@
   <ItemGroup>
     <ProjectCapability Include="SupportsSystemWeb" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="FluentFTP" />
+    <PackageReference Include="MailKit" />
+  </ItemGroup>
 </Project>
