--- a/src/Foundation/Wealth/platform/Foundation.Wealth.csproj
+++ b/src/Foundation/Wealth/platform/Foundation.Wealth.csproj
@@ -9,7 +9,8 @@
     <ProjectCapability Include="SupportsSystemWeb" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="FluentFTP" />
     <PackageReference Include="MailKit" />
+    <PackageReference Include="Oracle.ManagedDataAccess" />
+    <PackageReference Include="FluentFTP" />
   </ItemGroup>
 </Project>
