Fix: 修正 namespace

--- a/src/Project/Wealth/platform/App_Config/Include/Foundation/Xcms/Xcms.Sitecore.Foundation.QuartzSchedule.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Foundation/Xcms/Xcms.Sitecore.Foundation.QuartzSchedule.config
@@ -42,7 +42,7 @@
         <handler type="Xcms.Sitecore.Foundation.QuartzSchedule.Sitecron.Core.Events.SitecronDeletedHandler, Xcms.Sitecore.Foundation.QuartzSchedule" method="OnItemDeleted" resolve="true" />
       </event>
       <event name="item:deleted:remote" role:require="ContentDelivery">
-        <handler type="Xcms.Sitecore.Foundation.QuartzSchedule.Events.SitecronDeletedHandler, Xcms.Sitecore.Foundation.QuartzSchedule" method="OnItemDeletedRemote" resolve="true" />
+        <handler type="Xcms.Sitecore.Foundation.QuartzSchedule.Sitecron.Core.Events.SitecronDeletedHandler, Xcms.Sitecore.Foundation.QuartzSchedule" method="OnItemDeletedRemote" resolve="true" />
       </event>
     </events>
     <pipelines>
