--- a/Packages.props
+++ b/Packages.props
@@ -25,12 +25,13 @@
     <PackageReference Update="Flurl.Http" Version="4.0.2" />
     <PackageReference Update="HtmlSanitizer" Version="8.0.865" />
     <PackageReference Update="MailKit" Version="4.6.0" />
-    <PackageReference Update="Oracle.ManagedDataAccess" Version="23.4.0" />
     <PackageReference Update="Quartz" Version="3.9.0" />
     <PackageReference Update="Scriban" Version="5.10.0" />
     <PackageReference Update="X.PagedList" Version="8.4.7" />
-    <!-- === pin misc === -->
+
+    <!-- === pin version === -->
     <PackageReference Update="Mapster" Version="7.3.0" />
+    <PackageReference Update="Oracle.ManagedDataAccess" Version="21.14.0" />
   </ItemGroup>
   <ItemGroup>
     <!-- === platform vulnerability version fix for === -->
