--- a/src/Feature/ScheduleAgent/platform/Feature.Wealth.ScheduleAgent.csproj
+++ b/src/Feature/ScheduleAgent/platform/Feature.Wealth.ScheduleAgent.csproj
@@ -13,8 +13,9 @@
     <Reference Include="Xcms.Sitecore.Foundation.QuartzSchedule">
       <HintPath>..\..\..\..\build\nugets\Xcms.Sitecore.Foundation.QuartzSchedule.dll</HintPath>
     </Reference>
-    <PackageReference Include="ChoETL.NETStandard" VersionOverride="1.2.1.64" />
+    <PackageReference Include="CsvHelper"/>
     <PackageReference Include="Dapper" />
+    <PackageReference Include="FixedWidthParserWriter" />
     <PackageReference Include="Quartz" />
   </ItemGroup>
 </Project>
