Update: 新增方法 ETL Service

--- a/src/Feature/ScheduleAgent/platform/Feature.Wealth.ScheduleAgent.csproj
+++ b/src/Feature/ScheduleAgent/platform/Feature.Wealth.ScheduleAgent.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="CsvHelper"/>
     <PackageReference Include="Dapper" />
     <PackageReference Include="FixedWidthParserWriter" />
+    <PackageReference Include="FluentFTP" />
     <PackageReference Include="Quartz" />
   </ItemGroup>
 </Project>
