--- a/src/Feature/ScheduleAgent/platform/App_Config/Include/Feature/Feature.Wealth.ScheduleAgent/Feature.Wealth.ScheduleAgent.config
+++ b/src/Feature/ScheduleAgent/platform/App_Config/Include/Feature/Feature.Wealth.ScheduleAgent/Feature.Wealth.ScheduleAgent.config
@@ -1,6 +1,10 @@
 ﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/" xmlns:role="http://www.sitecore.net/xmlconfig/role/" xmlns:environment="http://www.sitecore.net/xmlconfig/environment/">
   <sitecore>
     <settings>
+      <setting name="Feature.Wealth.ScheduleAgent.FeatureToggle.Ftp" value="true" />
+      <setting name="Feature.Wealth.ScheduleAgent.FeatureToggle.Sftp" value="false" />
+      <setting name="Feature.Wealth.ScheduleAgent.FeatureToggle.Db" value="false" />
+
       <setting name="downloadUrl" value="https://dj2.moneydj.com/download/firstbank/FirstbankRawdata2.zip" />
       <setting name="targetFolder" value="C:\inetpub\wwwroot\sitecore\weamg.fcbsrv.fcb.local\App_Data\zip" />
       <setting name="destFolder" value="C:\inetpub\wwwroot\sitecore\weamg.fcbsrv.fcb.local\App_Data\DBZIP" />
