Add: 新增第一銀行單一登入功能

--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -1,13 +1,49 @@
 ﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/" xmlns:role="http://www.sitecore.net/xmlconfig/role/" xmlns:environment="http://www.sitecore.net/xmlconfig/environment/">
   <sitecore>
-    <sites>
-      <site name="cms-sso-login" inherits="login" patch:before="site[@name='login']" role:require="Standalone or ContentManagement">
+    <pipelines role:require="Standalone or ContentManagement" environment:require="Local or Staging or Production">
+      <speak.logout argsType="Sitecore.Pipelines.Logout.LogoutArgs">
+        <processor type="Feature.Wealth.Account.Pipelines.SingleSignOut, Feature.Wealth.Account" mode="on" />
+      </speak.logout>
+    </pipelines>
+    <processors role:require="Standalone or ContentManagement" environment:require="Local or Staging or Production">
+      <logout argsType="Sitecore.Pipelines.Logout.LogoutArgs">
+        <processor patch:before="processor[@type='Sitecore.Pipelines.Logout.GotoLogin, Sitecore.Kernel']" type="Feature.Wealth.Account.Pipelines.SingleSignOut, Feature.Wealth.Account" mode="on" />
+      </logout>
+    </processors>
+    <authoring environment:require="Local or Staging or Production">
+      <graphql>
+        <tokenValidator>
+          <param desc="authenticationType">
+            <patch:delete />
+          </param>
+          <param desc="authenticationType"></param>
+        </tokenValidator>
+      </graphql>
+    </authoring>
+    <federatedAuthentication environment:require="Local or Staging or Production">
+      <identityProviders>
+        <identityProvider id="SitecoreIdentityServer">
+          <enabled>false</enabled>
+        </identityProvider>
+      </identityProviders>
+    </federatedAuthentication>
+    <sites role:require="Standalone or ContentManagement">
+      <site name="shell">
+        <patch:attribute name="loginPage" environment:require="Local or Development">/sitecore/login</patch:attribute>
+      </site>
+      <site name="admin">
+        <patch:attribute name="loginPage" environment:require="Local or Staging or Production">/sitecore/admin/login.aspx</patch:attribute>
+      </site>
+      <site name="login-sso" inherits="login" patch:before="site[@name='login']" environment:require="Local or Staging or Production">
         <patch:attribute name="virtualFolder">/sso/login</patch:attribute>
         <patch:attribute name="physicalFolder">/sso/login</patch:attribute>
         <patch:attribute name="language">zh-TW</patch:attribute>
       </site>
     </sites>
     <settings>
+      <setting name="Feature.Wealth.Account.SSO.LogoutUrl" value="https://am.firstbank.com.tw/AGLogout">
+        <patch:attribute name="value" environment:require="Staging">https://am5test.firstbank-tt.com.tw/AGLogout</patch:attribute>
+      </setting>
       <setting name="Facebook.AppId" value="795305872480111" environment:require="Local or Development" />
       <setting name="Facebook.AppSecret" value="9d1f95cf5d394d20bcfa2da2929da8ba" environment:require="Local or Development" />
       <setting name="Facebook.AppId" value="" environment:require="Staging or Production" />
