--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -44,21 +44,43 @@
       <setting name="Feature.Wealth.Account.SSO.LogoutUrl" value="https://am.firstbank.com.tw/AGLogout">
         <patch:attribute name="value" environment:require="Staging">https://am5test.firstbank-tt.com.tw/AGLogout</patch:attribute>
       </setting>
-      <setting name="Facebook.AppId" value="795305872480111" environment:require="Local or Development" />
-      <setting name="Facebook.AppSecret" value="9d1f95cf5d394d20bcfa2da2929da8ba" environment:require="Local or Development" />
-      <setting name="Facebook.AppId" value="" environment:require="Staging or Production" />
-      <setting name="Facebook.AppSecret" value="" environment:require="Staging or Production" />
+    <!--第三方登入資訊-->
+      <setting name="Facebook.AppId" value="795305872480111"  environment:require="Local or Development">
+        <patch:attribute value="2209337179431272" environment:require="Staging"/>
+        <patch:attribute value="472848741837981" environment:require="Production"/>
+      </setting>
+      <setting name="Facebook.AppSecret" value="9d1f95cf5d394d20bcfa2da2929da8ba"  environment:require="Local or Development">
+        <patch:attribute value="d495c096d8839ea50ca29d4713bd707e" environment:require="Staging"/>
+        <patch:attribute value="de5a8040590ae4b3c0859636b1353658" environment:require="Production"/>
+      </setting>
       <setting name="Facebook.AuthUrl" value="https://www.facebook.com/v19.0/dialog/oauth?client_id={AppId}&amp;redirect_uri={RedirectUrl}&amp;state={state}" />
       <setting name="Facebook.TokenUrl" value="https://graph.facebook.com/v19.0/oauth/access_token?client_id={AppId}&amp;redirect_uri={RedirectUrl}&amp;client_secret={AppSecret}&amp;code={code}" />
       <setting name="Facebook.ProfileUrl" value="https://graph.facebook.com/v19.0/me?fields=id,name,email" />
-      <setting name="Line.ClientId" value="2004541583" environment:require="Local or Development" />
-      <setting name="Line.ClientSecret" value="614ececff1b8984eef0cfdb784b6db75" environment:require="Local or Development" />
-      <setting name="Line.ClientId" value="" environment:require="Staging or Production" />
-      <setting name="Line.ClientSecret" value="" environment:require="Staging or Production" />
-      <setting name="Line.AuthUrl" value="https://access.line.me/oauth2/v2.1/authorize?scope={scope}&amp;response_type=code&amp;state={state}&amp;redirect_uri={RedirectUrl}&amp;client_id={clientid}" />
-      <setting name="Line.TokenUrl" value="https://api.line.me/oauth2/v2.1/token" />
-      <setting name="Line.ProfileUrl" value="https://api.line.me/v2/profile" />
-      <setting name="Line.VerifyUrl" value="https://api.line.me/oauth2/v2.1/verify" />
+      <setting name="Line.ClientId" value="2004541583" environment:require="Local or Development" >
+        <patch:attribute value="1619990426" environment:require="Staging"/>
+        <patch:attribute value="1626443810" environment:require="Production"/>
+      </setting>
+      <setting name="Line.ClientSecret" value="614ececff1b8984eef0cfdb784b6db75" environment:require="Local or Development">
+        <patch:attribute value="e4aa6c7dd4d61c3c1dcc3cfa65231637" environment:require="Staging"/>
+        <patch:attribute value="b5ee994321512fa6dcf85fa8055f9e2c" environment:require="Production"/>
+      </setting>
+      <setting name="Line.AuthUrl" value="https://access.line.me/oauth2/v2.1/authorize?scope={scope}&amp;response_type=code&amp;state={state}&amp;redirect_uri={RedirectUrl}&amp;client_id={clientid}"/>
+      <setting name="Line.TokenUrl" value="https://api.line.me/oauth2/v2.1/token"/>
+      <setting name="Line.ProfileUrl" value="https://api.line.me/v2/profile"/>
+      <setting name="Line.VerifyUrl" value="https://api.line.me/oauth2/v2.1/verify"/>
+      <!--一銀網銀登入AppAay資訊-->
+      <setting name="AppPay.Id" value="WEA" environment:require="Local or Development or Staging" >
+        <patch:attribute value="" environment:require="Production"/>
+      </setting>
+      <setting name="AppPay.Key" value="gIVNc3DU71n9yJEc1qPY" environment:require="Local or Development or Staging">
+        <patch:attribute value="" environment:require="Production"/>
+      </setting>
+      <setting name="AppPay.VerifyUrl" value="https://10.14.84.3/apppay/0201.do" environment:require="Local or Development or Staging" >
+        <patch:attribute value="" environment:require="Production"/>
+      </setting>
+      <setting name="AppPay.CallLoginUrl" value="https://10.14.84.3/apppay/0202.do" environment:require="Local or Development or Staging">
+        <patch:attribute value="" environment:require="Production"/>
+      </setting>
     </settings>
   </sitecore>
 </configuration>
