--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -51,6 +51,8 @@
       <setting name="MobileIleoRegular" value="https://fcbileo.page.link/?link=https%3A%2F%2Ffcbileo.page.link%2FFundRegular?FundCode%3D{}&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite" environment:require="Production "/>
       <setting name="CurrencyWebSite" value="https://mobiletest.firstbank.com.tw/c1/cheetah/zh/07/currency" environment:require="Local or Development or Staging"/>
       <setting name="CurrencyWebSite" value="https://mobile.firstbank.com.tw/c1/cheetah/zh/07/currency" environment:require="Production"/>
+      <setting name="FocusApiRoute" value="https://mbankTest.firstbank.com.tw:8443/fbp/MBankTxnLiteFTL.action" environment:require="Local or Development or Staging"/>
+      <setting name="FocusApiRoute" value="https://mbank.firstbank.com.tw:8443/fbp/MBankTxnLiteFTL.action" environment:require="Production"/>
     </settings>
   </sitecore>
 </configuration>
