Update: Account config

--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -10,7 +10,7 @@
         <processor patch:before="processor[@type='Sitecore.Pipelines.Logout.GotoLogin, Sitecore.Kernel']" type="Feature.Wealth.Account.Pipelines.SingleSignOut, Feature.Wealth.Account" mode="on" />
       </logout>
     </processors>
-    <authoring environment:require="Local or Staging or Production">
+    <authoring role:require="Standalone or ContentManagement" environment:require="Local or Staging or Production">
       <graphql>
         <tokenValidator>
           <param desc="authenticationType">
@@ -20,7 +20,7 @@
         </tokenValidator>
       </graphql>
     </authoring>
-    <federatedAuthentication environment:require="Local or Staging or Production">
+    <federatedAuthentication role:require="Standalone or ContentManagement" environment:require="Local or Staging or Production">
       <identityProviders>
         <identityProvider id="SitecoreIdentityServer">
           <enabled>false</enabled>
