update: 關注基金相關調整

--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -75,7 +75,7 @@
         <patch:attribute value="https://mobile.firstbank.com.tw/c1/cheetah/zh/07/currency" environment:require="Production"/>
       </setting>
       <!--關注清單api-->
-      <setting name="FocusApiRoute" value="https://mbankTest.firstbank.com.tw:8443/fbp/MBankTxnLiteFTL.action" environment:require="Local or Development or Staging">
+      <setting name="FocusApiRoute" value="https://mbankTest.firstbank.com.tw:8443/fbp/MBankTxnLiteFTL.action" environment:require="Staging">
         <patch:attribute value="https://mbank.firstbank.com.tw:8443/fbp/MBankTxnLiteFTL.action" environment:require="Production"/>
       </setting>
     </settings>
